vlib/v/parser/tests/enum_gen_map_assign_field_err.vv
[gen_map]
enum Foo {
	bar
	baz = 1
}
